2011-10-12  Kristóf Kosztyó  <kkristof@inf.u-szeged.hu>

        new-run-webkit-tests does not support qt-4.8 results
        https://bugs.webkit.org/show_bug.cgi?id=64071

        Reviewed by Csaba Osztrogonác.

        * Scripts/webkitpy/layout_tests/port/qt.py:
        * Scripts/webkitpy/layout_tests/port/qt_unittest.py:

2011-10-10  Martin Robinson  <mrobinson@igalia.com>

        [GTK] [WebKit2] Make adding another unit test easier
        https://bugs.webkit.org/show_bug.cgi?id=69409

        Reviewed by Gustavo Noronha Silva.

        * Scripts/run-gtk-tests: Update run-gtk-tests to be able to execute
        new WebKit2 tests.

2011-10-11  Takashi Toyoshima  <toyoshim@chromium.org>

        [WebSocket] update pywebsocket to 0.6b6.
        https://bugs.webkit.org/show_bug.cgi?id=69824

        Reviewed by Kent Tamura.

        WebKit supports WebSocket with version 8 based protocol for now.
        We should update its protocol to version 13 based one like hybi-17.
        pywebsocket 0.6b6 supports both of version 8 and 13.

        * Scripts/webkitpy/thirdparty/__init__.py:

2011-10-11  Simon Fraser  <simon.fraser@apple.com>

        WebKitTestRunner needs to link with WebKit for NSURL category methods
        https://bugs.webkit.org/show_bug.cgi?id=69892

        Reviewed by Sam Weinig.
        
        WebDragClient::declareAndWriteDragImage() was throwing an Obj-C exception on 10.6 because
        the +_web_originalDataAsString selector on NSURL was not recognized. Link with
        WebKit.framework to fix this.

        * WebKitTestRunner/WebKitTestRunner.xcodeproj/project.pbxproj:

2011-10-11  Adam Barth  <abarth@webkit.org>

        sheriffbot takes too long to acknowledge rollout commands
        https://bugs.webkit.org/show_bug.cgi?id=69871

        Reviewed by Eric Seidel.

        We used to update the working copy before acknowledging the command
        because we wanted to ping all the relevant IRC nicks.  That's caused a