@@ -1,3 +1,14 @@
+2011-10-12  Sheriff Bot  <webkit.review.bot@gmail.com>
+
+        Unreviewed, rolling out r97252.
+        http://trac.webkit.org/changeset/97252
+        https://bugs.webkit.org/show_bug.cgi?id=69944
+
+        Broke test-webkpy (Requested by abarth on #webkit).
+
+        * Scripts/webkitpy/layout_tests/port/qt.py:
+        * Scripts/webkitpy/layout_tests/port/qt_unittest.py:
+
 2011-10-12  Kristóf Kosztyó  <kkristof@inf.u-szeged.hu>
 
         new-run-webkit-tests does not support qt-4.8 results
